--- a/style.css
+++ b/style.css
@@ -12,9 +12,41 @@ body, html {
     /* Centraliza horizontalmente */
     background-color: #201b2c;
         /* Definindo uma cor de fundo global para a página */
-        padding-bottom: 60px; /* Ajuste conforme a altura do seu rodapé */
+    padding-bottom: 60px; /* Ajuste conforme a altura do seu rodapé */
     }
 
+.header {
+    align-items: center;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+    height: 80px;
+    background-color: #2f2841;
+    box-shadow: 0px 10px 40px #00000056;
+
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 20px;
+    align-items: center;
+}
+
+.navbar > li {
+    margin: 40px;
+    justify-content: flex-end;
+    list-style: none;
+}
+
+
+.header-logo{
+    display: flex;
+    align-items: center;
+    margin: 50px;
+    width: 80px;
+}
 
 .main-form {
     width: 100vw;
