Incluido script JS para regra de seleceção DT INICIO

--- a/acomp.css
+++ b/acomp.css
@@ -1,19 +1,18 @@
 
 
-.table {
+    .table {
         width: 100%;
         border-collapse: collapse;
     }
 
-.th,
+    th,
     td {
         border: 1px solid #ddd;
         padding: 8px;
         text-align: left;
     }
 
-.th {
+    th {
         background-color: #f2f2f2;
     }
 
-    
